# django-federation-auditlog

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
auditlog/: admin.py  diff.py  models.py
auditlog/migrations/: 0001_initial.py
django_federation_auditlog/: admin.py  apps.py  diff.py  middleware.py  mixins.py  models.py  receivers.py  registry.py
django_federation_auditlog/migrations/: 0001_initial.py
